integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_owner-get-asset-batch.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
[
  {
    "interface": "V1_NFT",
    "id": "HwVsAvTjGNgynbGmDyAESS7HkLmJPuaHgHbDQ1MRoPf5",
    "content": {
      "$schema": "https://schema.metaplex.com/nft1.0.json",
      "json_uri": "https://nftstorage.link/ipfs/bafybeiadmasysy7ttgtie4xn6mtr2bskagz2keaitsmugrfyqov2c3th7e/7.json",
      "files": [],
      "metadata": {
        "name": "Studious Crab #8",
        "symbol": "NB",
        "token_standard": "NonFungible"
      },
      "links": {}
    },
    "authorities": [
      {
        "address": "B9fcrRtNZK1j29sfPhrdrcbNwkrNcEGWNu7XFApt56ww",
        "scopes": [
          "full"
        ]
      }
    ],
    "compression": {
      "eligible": false,
      "compressed": false,
      "data_hash": "",
      "creator_hash": "",
      "asset_hash": "",
      "tree": "",
      "seq": 0,
      "leaf_id": 0
    },
    "grouping": [
      {
        "group_key": "collection",
        "group_value": "4xLyR1C1HyZQoAMZD3Spkzzzb6ABYq2kquDvFKpe7HmD"
      }
    ],
    "royalty": {
      "royalty_model": "creators",
      "target": null,
      "percent": 0.0001,
      "basis_points": 1,
      "primary_sale_happened": true,
      "locked": false
    },
    "creators": [
      {
        "address": "d4QS3zDyVGngLB2m423jeoG2K4wxcVJz6XB8VTsZPwP",
        "share": 0,
        "verified": true
      },
      {
        "address": "B9fcrRtNZK1j29sfPhrdrcbNwkrNcEGWNu7XFApt56ww",
        "share": 100,
        "verified": false
      }
    ],
    "ownership": {
      "frozen": false,
      "delegated": false,
      "delegate": null,
      "ownership_model": "single",
      "owner": "B9fcrRtNZK1j29sfPhrdrcbNwkrNcEGWNu7XFApt56ww"
    },
    "supply": {
      "print_max_supply": 0,
      "print_current_supply": 0,
      "edition_nonce": 255
    },
    "mutable": true,
    "burnt": false,
    "token_info": {
      "supply": 1,
      "decimals": 0,
      "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
    }
  },
  {
    "interface": "FungibleToken",
    "id": "Hp9aaQWpBmr4fc257KG19pSfitPGahTHpH9fEXMFwDN5",
    "content": {
      "$schema": "https://schema.metaplex.com/nft1.0.json",
      "json_uri": "",
      "files": [],
      "metadata": {},
      "links": {}
    },
    "authorities": [],
    "compression": {
      "eligible": false,
      "compressed": false,
      "data_hash": "",
      "creator_hash": "",
      "asset_hash": "",
      "tree": "",
      "seq": 0,
      "leaf_id": 0
    },
    "grouping": [],
    "royalty": {
      "royalty_model": "creators",
      "target": null,
      "percent": 0.0,
      "basis_points": 0,
      "primary_sale_happened": false,
      "locked": false
    },
    "creators": [],
    "ownership": {
      "frozen": false,
      "delegated": false,
      "delegate": null,
      "ownership_model": "token",
      "owner": ""
    },
    "supply": null,
    "mutable": true,
    "burnt": false,
    "mint_extensions": {
      "mint_close_authority": {
        "close_authority": "B9fcrRtNZK1j29sfPhrdrcbNwkrNcEGWNu7XFApt56ww"
      }
    },
    "token_info": {
      "supply": 200000000000000,
      "decimals": 9,
      "token_program": "TokenzQdBNbLqP5VEhdkAS6EPFLC1PHnBqCXEpPxuEb"
    }
  },
  {
    "interface": "FungibleToken",
    "id": "EbxeiHpnTkoBznU3F8CLHmMy8gLwrhun7EL3mP9fEPHi",
    "content": {
      "$schema": "https://schema.metaplex.com/nft1.0.json",
      "json_uri": "",
      "files": [],
      "metadata": {},
      "links": {}
    },
    "authorities": [],
    "compression": {
      "eligible": false,
      "compressed": false,
      "data_hash": "",
      "creator_hash": "",
      "asset_hash": "",
      "tree": "",
      "seq": 0,
      "leaf_id": 0
    },
    "grouping": [],
    "royalty": {
      "royalty_model": "creators",
      "target": null,
      "percent": 0.0,
      "basis_points": 0,
      "primary_sale_happened": false,
      "locked": false
    },
    "creators": [],
    "ownership": {
      "frozen": false,
      "delegated": false,
      "delegate": null,
      "ownership_model": "token",
      "owner": ""
    },
    "supply": null,
    "mutable": true,
    "burnt": false,
    "token_info": {
      "supply": 1000000000000,
      "decimals": 9,
      "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA"
    }
  },
  null
]
