integration_tests/tests/integration_tests/snapshots/integration_tests__fungible_tests__fungible_get_owner-search-assets-all-with-cursor-1.snap
---
source: integration_tests/tests/integration_tests/fungible_tests.rs
expression: response
---
{
  "total": 1,
  "limit": 1000,
  "cursor": "EbxeiHpnTkoBznU3F8CLHmMy8gLwrhun7EL3mP9fEPHi",
  "items": [
    {
      "interface": "FungibleToken",
      "id": "EbxeiHpnTkoBznU3F8CLHmMy8gLwrhun7EL3mP9fEPHi",
      "content": {
        "$schema": "https://schema.metaplex.com/nft1.0.json",
        "json_uri": "",
        "files": [],
        "metadata": {},
        "links": {}
      },
      "authorities": [],
      "compression": {
        "eligible": false,
        "compressed": false,
        "data_hash": "",
        "creator_hash": "",
        "asset_hash": "",
        "tree": "",
        "seq": 0,
        "leaf_id": 0
      },
      "grouping": [],
      "royalty": {
        "royalty_model": "creators",
        "target": null,
        "percent": 0.0,
        "basis_points": 0,
        "primary_sale_happened": false,
        "locked": false
      },
      "creators": [],
      "ownership": {
        "frozen": false,
        "delegated": false,
        "delegate": null,
        "ownership_model": "token",
        "owner": "B9fcrRtNZK1j29sfPhrdrcbNwkrNcEGWNu7XFApt56ww"
      },
      "supply": null,
      "mutable": true,
      "burnt": false,
      "token_info": {
        "balance": 1000000000000,
        "supply": 1000000000000,
        "decimals": 9,
        "token_program": "TokenkegQfeZyiNwAJbNbGKPFXCWuBvf9Ss623VQ5DA",
        "associated_token_address": "CJeTWDaD3AykHZa96bfbhyudLBvttmY53FQBQC6GyskH"
      }
    }
  ]
}
